# manifold3d

./: Cargo.toml  README.md  build.rs
.github/workflows/: code-quality.yml  test.yml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/manifold3d/: manifold.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/src/manifold/: vertex.rs
crates/types/src/math/: matrix4x3.rs  non_negative_num.rs  normalized_angle.rs  positive_num.rs
src/: bounding_box.rs  cross_section.rs  error.rs  fill_rule.rs  lib.rs  manifold.rs  manifold_vec.rs  mesh_gl.rs  meshgl.rs  polygons.rs  quality.rs  simple_polygon.rs  types.rs
src/types/: matrix4x3.rs  mod.rs  normalized_angle.rs  point2.rs  point3.rs  positive_num.rs  vec2.rs  vec3.rs
tests/: manifold.rs
