[package]
name = "manifold3d"
description = "Bindings for Manifold - a Geometry library for topological robustness"
homepage = "https://github.com/NickUfer/manifold3d-rs"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
num-traits = "0.2.19"
manifold-sys = { version = "0.0.2" }
nalgebra = { version = "0.33.0", optional = true }

[features]
nalgebra_interop = ["nalgebra"]