[package]
name = "manifold3d"
description = "Bindings for Manifold - a Geometry library for topological robustness"
homepage = "https://github.com/NickUfer/manifold3d-rs"
license = "Apache-2.0"
version = "0.0.2"
edition = "2021"

[dependencies]
thiserror = "2.0"
num-traits = "0.2.19"
manifold3d-sys = { version = "0.0.3" }
nalgebra = { version = "0.33.0", optional = true }

[features]
nalgebra_interop = ["nalgebra"]
export = ["manifold3d-sys/export"]
parallel = ["manifold3d-sys/parallel"]