[package]
name = "manifold3d"
description = "Bindings for Manifold - a Geometry library for topological robustness"
homepage = "https://github.com/NickUfer/manifold3d-rs"
license = "Apache-2.0"
version = "0.0.3"
edition = "2021"
include = [
    "/src",
    "/LICENSE",
    "/build.rs",
    "/tests"
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
manifold3d-types = { path = "crates/types", version = "0.0.1" }
manifold3d-macros = { path = "crates/macros", version = "0.0.1" }
manifold3d-sys = { version = "0.0.3" }
thiserror = "2.0.3"

[features]
nalgebra_interop = ["manifold3d-types/nalgebra_interop"]
export = ["manifold3d-sys/export"]
parallel = ["manifold3d-sys/parallel"]

[workspace]
members = [
    "crates/macros",
    "crates/types"
]
