[package]
name = "manifold3d-tests"
description = "Tests for the manifold3d crate. An internal dependency"
homepage = "https://github.com/NickUfer/manifold3d-rs"
repository = "https://github.com/NickUfer/manifold3d-rs/tree/master/crates/tests"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
include = ["/src", "/LICENSE"]

[dependencies]
manifold3d = { path = "../..", version = "0.0.3" }