[package]
name = "manifold3d-types"
description = "Types for the manifold3d crate. An internal dependency"
homepage = "https://github.com/NickUfer/manifold3d-rs"
repository = "https://github.com/NickUfer/manifold3d-rs/tree/master/crates/types"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
include = ["/src", "/LICENSE"]

[dependencies]
thiserror = "2.0.3"
num-traits = "0.2.19"
nalgebra = { version = "0.33.0", optional = true }
manifold3d-sys = "0.0.3"

[features]
nalgebra_interop = ["nalgebra"]